upgrade trace-etl jdk21